--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to Website!</h1>
-    <p>This is the homepage.</p>
+    <p>This is the homepage. Enjoy your stay!!</p>
 </body>
 </html>
