Updated homepage with login link

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to Website!</h1>
     <p>This is the homepage. Enjoy your stay!!</p>
+    <a href="login.html">Link</a>
 </body>
 </html>
