--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Welcome to Website!</h1>
     <p>This is the homepage.</p>
+    <a href="login.html">Login</a>
+    <p>New update on the main branch.</p>
 </body>
 </html>
